[package]
name = "mpv-mitm-proxy"
version = "1.4.2"
edition = "2024"

[dependencies]
lru = "0.18"
itoa = "1.0"
base64 = "0.22"
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.6"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
rcgen = { version = "0.14", features = ["pem"] }
tokio-socks = "0.5"
url = "2.5"
thiserror = "2.0"
dashmap = "6.2"
http = "1.1"
time = "0.3"
parking_lot = "0.12"
http-body = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
